feat. login, location 기능
기능: 로그인구현완료, 사용자위치완료, 검색지 위치완료, 아직 사용자위치와 검색지위치 비교를 통한 위치 인증 수정중.

--- a/views/comment.html
+++ b/views/comment.html
@@ -11,6 +11,14 @@
         <input type="text" name="comment" placeholder="comment" /><br>
         <button type="submit">전송</button>
     </form>
+
+    <!-- <p>
+        사용자 정보 삭제<br>
+        {% for userId in users %}
+            <a href="http://localhost:{{port}}/user/delete/{{userId}}">http://localhost:{{port}}/user/delete/{{userId}}</a><br>
+        {% endfor %}
+    </p> -->
+    
 </body>
 
 </html>
