--- a/views/user.html
+++ b/views/user.html
@@ -6,7 +6,14 @@
 </head>
 
 <body>
-    
+    <form id="form" action="" method="post">
+        사용자 정보 등록<br>
+        <input type="text" name="id" placeholder="ID" /><br>
+        <input type="text" name="password" placeholder="Password" /><br>
+        <input type="text" name="name" placeholder="Name" /><br>
+        <input type="text" name="description" placeholder="Description" /><br>
+        <button type="submit">전송</button>
+    </form>
 
     <p>
         <br>
@@ -21,6 +28,20 @@
             <a href="http://localhost:{{port}}/user/{{userId}}/comments">MY review</a><br>
         {% endfor %}
     </p>
+
+    <p>
+        <br>
+        <a href="http://localhost:{{ port }}/index">홈페이지로 돌아가기</a><br>
+    </p>
+    
+
+    <!-- 나중에 엔티티 설계 후 작성 -->
+    <!-- <p>
+        <br>
+        {% for userId in users %}
+            <a href="http://localhost:{{port}}/user/{{userId}}/comments">즐겨찾기</a><br>
+        {% endfor %}
+    </p> -->
 
 </body>
 
